--- a/Website-UX-2022/style.css
+++ b/Website-UX-2022/style.css
@@ -34,6 +34,7 @@ section {
     }
 }
 
+/*
 .logos {
     display: flex;
 }
@@ -49,4 +50,37 @@ section {
 
 .logos:nth-child(4) {
     transition-delay: 600ms;
+}
+
+*/
+
+.logo {
+    width: 6%;
+    border: 0px dotted hotpink;
+    margin: 0px;
+    padding: 16px;
+    overflow: hidden;
+}
+
+.logo:hover {
+    transform: rotate(270deg);
+    display: block;
+    margin: 0px;
+    padding: 18px;
+    transition: all 1s;
+
+    /*  top: -15%;
+    left: -5%;
+    overflow: auto;
+  margin: calc((455px - 111px)/2) calc((111px - 455px)/2);
+  */
+}
+
+.logoCover {
+    overflow: hidden;
+    border: 2px solid purple;
+}
+
+iframe {
+    min-height: 100vh;
 }
