Got a great webiste done

--- a/User-Experience-Portfolio/css/styles.css
+++ b/User-Experience-Portfolio/css/styles.css
@@ -72,7 +72,7 @@ img {
     top: 80%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-align: center;
+    text-align: match-parent;
     color: black;
     font-weight: bold;
 }
@@ -88,8 +88,8 @@ img {
 
 .flip-card {
     background-color: transparent;
-    width: 300px;
-    height: 300px;
+    width: 500px;
+    height: 500px;
     perspective: 1000px;
 }
 
@@ -110,8 +110,8 @@ img {
 .flip-card-front,
 .flip-card-back {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 150%;
+    height: 150%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
