Added all projects to commit

--- a/Scrimba-Learn-Javascript-for-free/project-3/index.css
+++ b/Scrimba-Learn-Javascript-for-free/project-3/index.css
@@ -6,6 +6,7 @@
 /* Special thanks to "heaven castro" @fontspace.com */
 body {
     margin: 0;
+    background-color: yellowgreen;
 }
 
 .container {
