--- a/Scrimba-Learn-Javascript-for-free/project-4/index.css
+++ b/Scrimba-Learn-Javascript-for-free/project-4/index.css
@@ -46,6 +46,6 @@ p {
     font-size: 30px;
     font-weight: bold;
     border: none;
-    border-radius: 2%;
+    border-radius: 3px;
     padding: 0px 40px 0px 40px;
 }
